--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "TypeScript port of rembg for web background removal - Demo App",
   "private": true,
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@techstark/opencv-js": "^4.11.0-release.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
